# AirbnDB-backend

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.py
app/: config.py  main.py
app/database/: __init__.py  connection.py
app/models/: __init__.py  schemas.py
app/routers/: heatmap.py  listings.py  search.py  stats.py
misc/: airbnb_schema.sql  consultas.sql  populate.py  postman_collection.json
